syntax = "proto3";
 
option java_package = "one.motion.proto.wallet.model";

option java_multiple_files = true;


import "wallet/result_code.proto";

message ExpendMsgProto { //消费單信息
    string orderId = 1; // 订单编号,必填
    uint64 userId = 2; //用户账号所属id，必填
    string mtn = 3;  //存入的mtn币值，必填
    int32 type = 4;  //交易类型（1信用卡，2社群挖矿，3交易所储值），必填

}

message ExpendResultProto {  //mtn消费結果
     string orderId = 1; //订单编号
     uint64 userId = 2; //用户账号所属id
     string mtn = 3;  //存入的mtn币值
     ResultCodeProto  resultCode = 4; //200為成功，其他为错误
     string resultMsg = 5;
}