syntax = "proto3";

option java_package = "one.motion.proto.wallet.service";

option java_multiple_files = true;

option java_outer_classname = "MtnServiceProto";

import "wallet/deposit.proto";
import "wallet/expend.proto";
import "wallet/unlock.proto";
import "wallet/transaction.proto";
import "wallet/check_api.proto";

service MtnService {
  rpc saveMtnDeposit(DepositMsgProto) returns (DepositResultProto) {}  //mtn幣存入
  rpc saveMtnExpend(ExpendMsgProto) returns (ExpendResultProto) {}  //mtn幣消费
  rpc unlock(UnlockMsgProto) returns (UnlockResultProto) {}  //接收mtn解鎖通知
  rpc sendTransaction(TransMsgProto) returns (TransResultProto) {}  //發起一筆交易
  rpc checkGRPC(CheckApiMsgProto) returns (CheckApiResultProto) {}  //檢查api
}